[index] homepage overhaul

--- a/gcsp/curriculum.html
+++ b/gcsp/curriculum.html
@@ -67,7 +67,7 @@
               nearly every part of my brain to do it. I'm a soprano and love to sing, and I also play a fairly
               wide repertoire of instruments: flute, tuba, euphonium/baritone, guitar, and a smattering of
               saxophone, piano, and bass drum.</p>
-            <p>Should you want to hear me wax poetic about music and why I love it, you can read <a href="http://kimberlyhorton.com/why-do-you-love-music/">
+            <p>Should you want to hear me wax poetic about music and why I love it, you can read <a href="http://kimberlynachbur.com/why-do-you-love-music/">
               this old blog post</a> I wrote about that very subject, back before I'd ever switched majors; but despite
               my change in career trajectory, everything there rings true. <em>If I don't study music, I am
               not myself.</em> There's a lot more to life than lines of code running across my screen,
