[index] add photo copyright

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
             <div id="hero-right">
                 <img src="img\hero-image.jpg" alt="Kimberly Nachbur, a white woman with curly red hair, stands in a forest next to a trailhead sign. She is looking to the left, and she is wearing a green beanie, black rain jacket, black jeans, and a graphic t-shirt." />
+                <div id="photo-credit">&#169; Blaine Greenway 2024</div>
             </div>
         </div>
         <!-- ABOUT ME HERO-->
