[index] added project cards and footer

--- a/index.html
+++ b/index.html
@@ -82,7 +82,110 @@
                     <img src="img/tree-fill.svg" alt="taller silhouette of a pine tree" id="tree-1"/><img src="img/tree-fill.svg" alt="shorter silhouette of a pine tree" id="tree-2"/>
                 </div>
             </div>
-            
+        </div>
+        <div id="projects-section">
+            <h2>projects I've worked on!</h2>
+            <div id="project-cards">
+                <a href="https://www.meatandright.com/">
+                    <div id="meat-and-right" class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <div class="card-img">
+                                    <img src="img/meatandright.png"/>
+                                </div>
+                                <h3>meat & right</h3>
+                            </div>
+                            <div class="card-back">
+                                <div class="card-img">
+                                    <h3>meat & right</h3> 
+                                    <p>a fast tracker</p> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="http://www.emergentrpg.com/">
+                    <div id="emergent" class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <div class="card-img">
+                                    <img src="img/emergentrpg.png"/>
+                                </div>
+                                <h3>emergent RPG</h3>
+                            </div>
+                            <div class="card-back">
+                                <div class="card-img">
+                                    <h3>emergent RPG</h3> 
+                                    <p>an indie ttrpg</p> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://graphicalanalysis.app">
+                    <div id="ga" class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <div class="card-img">
+                                    <img src="img/ga.png"/>
+                                </div>
+                                <h3>graphical analysis</h3>
+                            </div>
+                            <div class="card-back">
+                                <div class="card-img">
+                                    <h3>graphical analysis</h3> 
+                                    <p>science classroom software</p> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://theaberrantraven.webflow.io/compound-49">
+                    <div id="c49" class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <div class="card-img">
+                                    <img src="img/c49.png"/>
+                                </div>
+                                <h3>compound 49</h3>
+                            </div>
+                            <div class="card-back">
+                                <div class="card-img">
+                                    <h3>compound 49</h3> 
+                                    <p>an indie board game</p> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://videoanalysis.app/">
+                    <div id="va" class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <div class="card-img">
+                                    <img src="img/va.png"/>
+                                </div>
+                                <h3>video analysis</h3>
+                            </div>
+                            <div class="card-back">
+                                <div class="card-img">
+                                    <h3>video analysis</h3> 
+                                    <p>science classroom software</p> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div id="footer">
+            <div class="icon-bar">
+                <a href="https://www.linkedin.com/in/kimberly-anne/"><img src="img/linkedin.png" alt="linkedin logo icon"></a>
+                <a href="https://github.com/kimboleh"><img src="img/github.png" alt="github logo icon"></a>
+                <a href="mailto:kimberlynachbur@gmail.com"><img src="img/email.png" alt="email envelope icon"></a>
+            </div>
+            <p class="credits">Coded by hand with HTML and CSS.</p>
+            <p class="credits">&#169; Kimberly Nachbur 2024</p>
         </div>
     </body>
 </html>
