[index] update portfolio app descriptions

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <div class="card-back">
                                 <div class="card-img">
                                     <h3>meat & right</h3> 
-                                    <p>a fast tracker</p> 
+                                    <p>a tool for eastern orthodox christians to track their fasting calendar</p> 
                                 </div>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                             <div class="card-back">
                                 <div class="card-img">
                                     <h3>emergent RPG</h3> 
-                                    <p>an indie ttrpg</p> 
+                                    <p>website for an independent tabletop roleplaying game launching in late 2024</p> 
                                 </div>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                             <div class="card-back">
                                 <div class="card-img">
                                     <h3>graphical analysis</h3> 
-                                    <p>science classroom software</p> 
+                                    <p>PWA for science classrooms that connects to measurement tools and displays & processes data</p> 
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                             <div class="card-back">
                                 <div class="card-img">
                                     <h3>compound 49</h3> 
-                                    <p>an indie board game</p> 
+                                    <p>website for an independent board game planning a Kickstarter campaign</p> 
                                 </div>
                             </div>
                         </div>
@@ -169,8 +169,8 @@
                             </div>
                             <div class="card-back">
                                 <div class="card-img">
-                                    <h3>video analysis</h3> 
-                                    <p>science classroom software</p> 
+                                    <h3>video analysis</h3>
+                                    <p>PWA for science classrooms that analyzes data collected from videos</p> 
                                 </div>
                             </div>
                         </div>
