added section tags, webp image, and tweaked font sizes

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <!-- SIDEBAR -->
 
         <!-- TOP HERO -->
-        <div id="main-hero">
+        <section id="main-hero" aria-label="introduction">
             <div id="hero-left">
                 <div id="hero-title">
                     <h1>Hey there.</h1>
-                    <h1>I'm Kimberly Nachbur, <br/><span id="description-tags"><span id="webdev">web developer</span>, <span id="swe">software engineer</span>, & <span id="uxd">interface designer</span>.</span></h1>
+                    <h1>I'm Kimberly Nachbur, <br/><span id="description-tags"><span id="webdev">web developer</span>, <span id="swe">software engineer</span>, & <span id="uxd">WordPress wizard</span>.</span></h1>
                 </div>
             </div>
             <div id="hero-right">
-                <img src="img\hero-image.jpg" alt="Kimberly Nachbur, a white woman with curly red hair, stands in a forest next to a trailhead sign. She is looking to the left, and she is wearing a green beanie, black rain jacket, black jeans, and a graphic t-shirt." />
-                <div id="photo-credit">&#169; Blaine Greenway 2024</div>
+                <img src="img\hero-image.webp" alt="Kimberly Nachbur, a white woman with curly red hair, stands in a forest next to a trailhead sign. She is looking to the left, and she is wearing a green beanie, black rain jacket, black jeans, and a graphic t-shirt." />
+                <div id="photo-credit" aria-label="photo credit">&#169; Blaine Greenway 2024</div>
             </div>
-        </div>
+        </section>
         <!-- ABOUT ME HERO-->
-        <div id="about-me">
+        <section id="about-me" aria-label="About Me">
             <div id="about-left">
                 <div id="about-text">
                     <h2>a little about me</h2>
@@ -48,7 +48,7 @@
                             <li>JavaScript & TypeScript</li>
                             <li>React.js</li>
                             <li>Node</li>
-                            <li>LitElement & Web Components</li><br/>
+                            <li>WordPress Development</li><br/>
 
                             <li>HTML/CSS</li>
                             <li>SCSS & SASS</li>
@@ -82,8 +82,9 @@
                     <img src="img/tree-fill.svg" alt="taller silhouette of a pine tree" id="tree-1"/><img src="img/tree-fill.svg" alt="shorter silhouette of a pine tree" id="tree-2"/>
                 </div>
             </div>
-        </div>
-        <div id="projects-section">
+        </section>
+        <!-- PROJECTS -->
+        <section id="projects-section" aria-label="My Projects">
             <h2>projects I've worked on!</h2>
             <div id="project-cards">
                 <a href="https://www.meatandright.com/">
@@ -177,15 +178,15 @@
                     </div>
                 </a>
             </div>
-        </div>
-        <div id="footer">
+        </section>
+        <footer id="footer">
             <div class="icon-bar">
                 <a href="https://www.linkedin.com/in/kimberly-anne/"><img src="img/linkedin.png" alt="linkedin logo icon"></a>
                 <a href="https://github.com/kimboleh"><img src="img/github.png" alt="github logo icon"></a>
                 <a href="mailto:kimberlynachbur@gmail.com"><img src="img/email.png" alt="email envelope icon"></a>
             </div>
             <p class="credits">Coded by hand with HTML and CSS.</p>
-            <p class="credits">&#169; Kimberly Nachbur 2024</p>
-        </div>
+            <p class="credits">&#169; Kimberly Nachbur 2025</p>
+        </footer>
     </body>
 </html>
